electronic-shop/games-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games-v2
spec:
  selector:
    matchLabels:
      app: games
      version: v2
  replicas: 1
  template:
    metadata:
      annotations:
        readiness.status.sidecar.istio.io/applicationPorts: ""
      labels:
        app: games
        version: v2
    spec:
      containers:
        - name: games
          image: quay.io/kiali/demo_error_rates_server:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
          securityContext:
            privileged: false
