electronic-shop/electronic-shop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
      version: v1
  replicas: 1
  template:
    metadata:
      annotations:
        readiness.status.sidecar.istio.io/applicationPorts: ""
      labels:
        app: web
        version: v1
    spec:
      containers:
        - name: web
          image: quay.io/kiali/demo_error_rates_client:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
          securityContext:
            privileged: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobile
spec:
  selector:
    matchLabels:
      app: mobile
      version: v1
  replicas: 1
  template:
    metadata:
      annotations:
        readiness.status.sidecar.istio.io/applicationPorts: ""
      labels:
        app: mobile
        version: v1
    spec:
      containers:
        - name: mobile
          image: quay.io/kiali/demo_error_rates_client:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
          securityContext:
            privileged: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-v1
spec:
  selector:
    matchLabels:
      app: music
      version: v1
  replicas: 1
  template:
    metadata:
      annotations:
        readiness.status.sidecar.istio.io/applicationPorts: ""
      labels:
        app: music
        version: v1
    spec:
      containers:
        - name: music
          image: quay.io/kiali/demo_error_rates_server:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
          securityContext:
            privileged: false
---
apiVersion: v1
kind: Service
metadata:
  name: music
  labels:
    app: music
spec:
  ports:
    - name: http
      port: 8888
  selector:
    app: music
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-v1
spec:
  selector:
    matchLabels:
      app: bookstore
      version: v1
  replicas: 1
  template:
    metadata:
      annotations:
        readiness.status.sidecar.istio.io/applicationPorts: ""
      labels:
        app: bookstore
        version: v1
    spec:
      containers:
        - name: bookstore
          image: quay.io/kiali/demo_error_rates_server:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
          securityContext:
            privileged: false
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore
  labels:
    app: bookstore
spec:
  ports:
    - name: http
      port: 8888
  selector:
    app: bookstore
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games-v1
spec:
  selector:
    matchLabels:
      app: games
      version: v1
  replicas: 1
  template:
    metadata:
      annotations:
        readiness.status.sidecar.istio.io/applicationPorts: ""
      labels:
        app: games
        version: v1
    spec:
      containers:
        - name: games
          image: quay.io/kiali/demo_error_rates_server:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
          securityContext:
            privileged: false
---
apiVersion: v1
kind: Service
metadata:
  name: games
  labels:
    app: games
spec:
  ports:
    - name: http
      port: 8888
  selector:
    app: games
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-v1
spec:
  selector:
    matchLabels:
      app: shop
      version: v1
  replicas: 1
  template:
    metadata:
      annotations:
        readiness.status.sidecar.istio.io/applicationPorts: ""
      labels:
        app: shop
        version: v1
    spec:
      containers:
        - name: shop
          image: quay.io/kiali/demo_error_rates_server:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
          securityContext:
            privileged: false
---
apiVersion: v1
kind: Service
metadata:
  name: shop
  labels:
    app: shop
spec:
  ports:
    - name: http
      port: 8888
  selector:
    app: shop
