electronic-shop/bookstore-service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: www-bookdepository-com
spec:
  hosts:
    - www.bookdepository.com
  ports:
    - number: 80
      name: http-port
      protocol: HTTP
      targetPort: 443
    - number: 443
      name: https
      protocol: HTTPS
  resolution: NONE
  location: MESH_EXTERNAL
